pld: compile all the grammars to Wasm

--- a/packages/liquid-html-parser/package.json
+++ b/packages/liquid-html-parser/package.json
@@ -32,8 +32,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@ohm-js/miniohm-js": "file:/Users/pdubroy/dev/ohmjs/ohm/packages/miniohm-js",
-    "@ohm-js/wasm": "file:/Users/pdubroy/dev/ohmjs/ohm/packages/wasm",
+    "@ohm-js/miniohm-js": "^0.3.4",
+    "@ohm-js/wasm": "^0.3.2",
     "chai": "^6.0.1",
     "line-column": "^1.0.2",
     "ohm-js": "^17.0.0"
