--- a/packages/liquid-html-parser/package.json
+++ b/packages/liquid-html-parser/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@ohm-js/miniohm-js": "^0.3.6",
+    "@ohm-js/wasm": "^0.3.3",
     "@types/line-column": "^1.0.0"
   }
 }
